force-app/main/default/objects/Tips_Intel__c/Tips_Intel__c.object-meta.xml
<CustomObject>
    <description>This repository will store information provided as TIPS and Intelligence (previously Shoe box items)</description>
    <label>Intelligence Report</label>
    <nameField>
        <displayFormat>IR-{YYYY}-{0}</displayFormat>
        <label>Intelligence Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intelligence Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>