force-app/main/default/objects/Tips_Intel__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cruelty</fullName>
            </value>
            <value>
                <fullName>Puppy Mill</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Cruelty-Other</fullName>
            </value>
            <value>
                <fullName>Dogfighting</fullName>
            </value>
            <value>
                <fullName>Cockfighting</fullName>
            </value>
            <value>
                <fullName>Bloodsports-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>