force-app/main/default/objects/Tips_Intel__c/fields/Activity_Address__c.field-meta.xml
<CustomField>
    <fullName>Activity_Address__c</fullName>
    <label>Activity-Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>