force-app/main/default/objects/Tips_Intel__c/fields/Activity_City__c.field-meta.xml
<CustomField>
    <fullName>Activity_City__c</fullName>
    <label>Activity-City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>