force-app/main/default/objects/Tips_Intel__c/fields/Activity_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Activity_Zipcode__c</fullName>
    <label>Activity - Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>