force-app/main/default/objects/Tips_Intel__c/fields/Alias_or_Moniker__c.field-meta.xml
<CustomField>
    <fullName>Alias_or_Moniker__c</fullName>
    <label>Alias or Moniker</label>
    <length>40</length>
    <type>Text</type>
</CustomField>