force-app/main/default/objects/Tips_Intel__c/fields/Associates__c.field-meta.xml
<CustomField>
    <fullName>Associates__c</fullName>
    <label>Associates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>