force-app/main/default/objects/Tips_Intel__c/fields/Bloodline__c.field-meta.xml
<CustomField>
    <fullName>Bloodline__c</fullName>
    <label>Bloodline</label>
    <length>80</length>
    <type>Text</type>
</CustomField>