force-app/main/default/objects/Tips_Intel__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <label>Species</label>
    <length>80</length>
    <type>Text</type>
</CustomField>