force-app/main/default/objects/Tips_Intel__c/fields/Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License__c</fullName>
    <label>Driver&apos;s License #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>