force-app/main/default/objects/Tips_Intel__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>