force-app/main/default/objects/Tips_Intel__c/fields/Employer_Description__c.field-meta.xml
<CustomField>
    <fullName>Employer_Description__c</fullName>
    <label>Employer Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>