force-app/main/default/objects/Tips_Intel__c/fields/Information_Reliability__c.field-meta.xml
<CustomField>
    <fullName>Information_Reliability__c</fullName>
    <label>Information Reliability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completely Reliable</fullName>
            </value>
            <value>
                <fullName>Witnessed by Citizen</fullName>
            </value>
            <value>
                <fullName>Anonymous Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>