force-app/main/default/objects/Tips_Intel__c/fields/Is_Dangerous__c.field-meta.xml
<CustomField>
    <fullName>Is_Dangerous__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box is the suspect is considered dangerous.</inlineHelpText>
    <label>Is Dangerous</label>
    <type>Checkbox</type>
</CustomField>