force-app/main/default/objects/Tips_Intel__c/fields/Kennel_Name__c.field-meta.xml
<CustomField>
    <fullName>Kennel_Name__c</fullName>
    <label>Kennel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>