force-app/main/default/objects/Tips_Intel__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Narrative</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>