force-app/main/default/objects/Tips_Intel__c/fields/Narrative_TA__c.field-meta.xml
<CustomField>
    <fullName>Narrative_TA__c</fullName>
    <label>Narrative - TA</label>
    <type>TextArea</type>
</CustomField>