force-app/main/default/objects/Tips_Intel__c/fields/Scars_Marks_Tatoo__c.field-meta.xml
<CustomField>
    <fullName>Scars_Marks_Tatoo__c</fullName>
    <label>Scars, Marks Tatoo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>