force-app/main/default/objects/Tips_Intel__c/fields/Source_Origin__c.field-meta.xml
<CustomField>
    <fullName>Source_Origin__c</fullName>
    <label>Source Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>