force-app/main/default/objects/Tips_Intel__c/fields/Subject_Address__c.field-meta.xml
<CustomField>
    <fullName>Subject_Address__c</fullName>
    <label>Subject-Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>