force-app/main/default/objects/Tips_Intel__c/fields/Subject_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Subject_Address_Line_2__c</fullName>
    <label>Subject Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>