force-app/main/default/objects/Tips_Intel__c/fields/Subject_City__c.field-meta.xml
<CustomField>
    <fullName>Subject_City__c</fullName>
    <label>Subject City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>