force-app/main/default/objects/Tips_Intel__c/fields/Subject_DOB__c.field-meta.xml
<CustomField>
    <fullName>Subject_DOB__c</fullName>
    <label>Subject DOB</label>
    <length>80</length>
    <type>Text</type>
</CustomField>