force-app/main/default/objects/Tips_Intel__c/fields/Subject_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_First_Name__c</fullName>
    <label>Subject First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>