force-app/main/default/objects/Tips_Intel__c/fields/Subject_Gender__c.field-meta.xml
<CustomField>
    <fullName>Subject_Gender__c</fullName>
    <label>Subject Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>