force-app/main/default/objects/Tips_Intel__c/fields/Subject_Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Subject_Hair_Color__c</fullName>
    <label>Subject Hair Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>