force-app/main/default/objects/Tips_Intel__c/fields/Subject_Height__c.field-meta.xml
<CustomField>
    <fullName>Subject_Height__c</fullName>
    <label>Subject Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>