force-app/main/default/objects/Tips_Intel__c/fields/Subject_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Middle_Name__c</fullName>
    <label>Subject Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>