force-app/main/default/objects/Tips_Intel__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <label>Subject Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>