force-app/main/default/objects/Tips_Intel__c/fields/Subject_Race__c.field-meta.xml
<CustomField>
    <fullName>Subject_Race__c</fullName>
    <label>Subject Race</label>
    <length>40</length>
    <type>Text</type>
</CustomField>