force-app/main/default/objects/Tips_Intel__c/fields/Subject_Weight__c.field-meta.xml
<CustomField>
    <fullName>Subject_Weight__c</fullName>
    <label>Subject Weight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>