force-app/main/default/objects/Tips_Intel__c/fields/Subject_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Subject_Zipcode__c</fullName>
    <label>Subject Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>