force-app/main/default/objects/Tips_Intel__c/fields/Tip_Intel__c.field-meta.xml
<CustomField>
    <fullName>Tip_Intel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tip Intel</label>
    <referenceTo>Tips_Intel__c</referenceTo>
    <relationshipName>Tips_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>