force-app/main/default/objects/Tips_Intel__c/fields/Tip_Source_Address__c.field-meta.xml
<CustomField>
    <fullName>Tip_Source_Address__c</fullName>
    <label>Source - Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>