force-app/main/default/objects/Tips_Intel__c/fields/Tip_Source_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Tip_Source_Contact_Name__c</fullName>
    <label>Source Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>