force-app/main/default/objects/Tips_Intel__c/fields/Tip_Source_Email__c.field-meta.xml
<CustomField>
    <fullName>Tip_Source_Email__c</fullName>
    <label>Source - Email</label>
    <type>Email</type>
</CustomField>