force-app/main/default/objects/Tips_Intel__c/fields/Tip_Source_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Tip_Source_Phone_Number__c</fullName>
    <label>Source - Phone Number</label>
    <type>Phone</type>
</CustomField>