force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>