force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Comments__c</fullName>
    <label>Vehicle Comments</label>
    <type>TextArea</type>
</CustomField>