force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Description__c</fullName>
    <label>Vehicle Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>