force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Number__c</fullName>
    <label>Vehicle License Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>