force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>