force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Style__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Style__c</fullName>
    <label>Vehicle Style</label>
    <length>80</length>
    <type>Text</type>
</CustomField>