force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Vin__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Vin__c</fullName>
    <label>Vehicle VIN#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>