force-app/main/default/objects/Tips_Intel__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>