force-app/main/default/objects/Tips_Intel__c/listViews/Intelligence_Reports.listView-meta.xml
<ListView>
    <fullName>Intelligence_Reports</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tip_Source_Contact_Name__c</columns>
    <columns>Narrative__c</columns>
    <filterScope>Everything</filterScope>
    <label>Intelligence Reports</label>
</ListView>